# pytnon-web-goit

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md
hw-1/: main.py  (+1 more)
hw-10/: docker-compose.yaml  pyproject.toml
hw-10/db/pgdata/global/: 1260  1262  2671  pg_control  pg_internal.init
hw-10/db/pgdata/pg_stat/: pgstat.stat
hw-10/db/pgdata/pg_xact/: 0000
hw-10/hw10/hw10/: asgi.py  settings.py  urls.py  wsgi.py
hw-10/hw10/quotes/: admin.py  forms.py  models.py  urls.py  views.py
hw-10/hw10/quotes/migrations/: 0001_initial.py  0002_alter_tag_tag.py
hw-10/hw10/users/: forms.py  urls.py  views.py
hw-10/hw10/utils/: migration_data_from_mongo.py
hw-11/: main.py  pyproject.toml
hw-11/db/pgdata/: postmaster.pid
hw-11/db/pgdata/global/: 1262  2671  pg_control  pg_internal.init
hw-11/db/pgdata/pg_stat/: pgstat.stat
hw-11/db/pgdata/pg_xact/: 0000
hw-11/migrations/versions/: c0044a7f2928_init.py
hw-11/src/config/: config.py
hw-11/src/database/: db.py
hw-11/src/entity/: __init__.py  contact.py
hw-11/src/repository/: contact.py
hw-11/src/routes/: contancts.py
hw-11/src/util/: get_response_data.py
hw-12/: docker-compose.yaml  main.py  pyproject.toml
hw-12/db/pgdata/: postmaster.pid
hw-12/db/pgdata/global/: 1260  pg_control  pg_internal.init
hw-12/db/pgdata/pg_stat/: pgstat.stat
hw-12/db/pgdata/pg_xact/: 0000
hw-12/migrations/: env.py
hw-12/migrations/versions/: be10802a0b3c_added_user_role.py
hw-12/src/database/: db.py
hw-12/src/entity/: user.py
hw-12/src/repository/: contact.py  user.py
hw-12/src/routes/: auth.py  contancts.py
hw-12/src/schemas/: base.py  contacts.py  user.py
hw-12/src/services/: auth.py
hw-12/src/util/: get_response_data.py
hw-13/: docker-compose.yaml  main.py  pyproject.toml
hw-13/migrations/versions/: 732c42e2696b_added_refresh_token_for_user.py  b7d617a8ab27_added_user_id_to_contact.py  bf3db198d9dd_added_avatar_field_to_user.py  d314883633a6_added_deleted_at.py  d72937b81a7e_changed_birthday_type_from_str_to_date.py
hw-13/src/config/: config.py
hw-13/src/database/: cache.py
hw-13/src/entity/: contact.py  user.py
hw-13/src/repository/: contact.py  user.py
hw-13/src/routes/: auth.py  contancts.py  users.py
hw-13/src/schemas/: contacts.py
hw-13/src/services/: auth.py
hw-13/src/templates/emails/: confirm_user_email.html  reset_password_email.html
hw-13/src/templates/pages/: reset_password_page.html
hw-13/src/util/: is_string.py
hw-14/: .env.example  docker-compose.yaml  main.py  pyproject.toml  test.db
hw-14/db/pgdata/: postmaster.pid
hw-14/db/pgdata/global/: 1260  1262  2671  pg_control  pg_internal.init
hw-14/docs/: conf.py  index.rst
hw-14/docs/source/: conf.py  index.rst
hw-14/migrations/versions/: 0fb4ed44ec6f_added_is_completed_to_user.py  924c97f26a01_updated_user_id.py  e88d598121a4_added_user.py
hw-14/src/config/: constants.py
hw-14/src/entity/: __init__.py  user.py
hw-14/src/repository/: contact.py  user.py
hw-14/src/routes/: auth.py  contancts.py  users.py
hw-14/src/schemas/: base.py  contacts.py  user.py
hw-14/src/services/: access.py  mail.py
hw-14/src/templates/emails/: confirm_user_email.html
hw-14/src/util/: get_response_data.py
hw-14/tests/: conftest.py  test_auth_route.py  test_e2e_auth_route.py  test_e2e_contacts_route.py  test_unit_contact_repository.py  test_unit_user_repository.py
hw-2/: Dockerfile  pyproject.toml  requirements.txt  setup.py
hw-2/user_assistant/: command_enum.py  main.py
hw-2/user_assistant/address_book/: address_book.py
hw-2/user_assistant/class_fields/: field.py  id.py  mail.py  phone.py  tag.py
hw-2/user_assistant/console/table_format/: address_book_table.py  notes_table.py
hw-2/user_assistant/handlers/: handler_factory.py
hw-2/user_assistant/handlers/address_book/: add_contact.py  edit_phone.py  find_contact.py  remove_contact.py  remove_phone.py  search_contact.py  show_all_contacts.py
hw-2/user_assistant/handlers/common/: help.py
hw-2/user_assistant/handlers/notes/: add_note.py  add_tags.py  edit_note.py  find_note.py  remove_tags.py  search_notes_by_author.py  search_notes_by_tag.py
hw-2/user_assistant/notes/: note_record.py  notes.py
hw-2/user_assistant/sort_file/: file_sorter.py
hw-5/: chat.py  cli.py  constant.py  pyproject.toml
hw-5/cli/: main.py
hw-5/service/: exchange_rate.py
hw-5/websocket/: websocket_server.py
hw-5/websocket/websocket_handler/: websocket_exchange_handler.py  websocket_handler.py
hw-6/: db  (+4 more)
hw-8/: pyproject.toml
hw-8/mongo/: main.py  models.py  queries.py
hw-8/rabbit-mq/: connect.py  consumer_basic.py  consumer_email.py  consumer_sms.py  generate_users.py  models.py  producer.py
(+317 files in other folders)
