[tool.poetry]
name = "hw-11"
version = "0.1.0"
description = ""
authors = ["PotapovALeksey <37796979+PotapovALeksey@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.7"
fastapi = "0.110.0"
uvicorn = "0.28.0"
sqlalchemy = "2.0.28"
python-multipart = "0.0.9"
asyncpg = "0.29.0"
alembic = "^1.13.1"
greenlet = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
