[tool.poetry]
name = "user_assistant"
version = "0.1.0"
description = ""
authors = ["PotapovALeksey <37796979+PotapovALeksey@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.5"
rich = "13.7.0"
prompt-toolkit = "3.0.43"
phonenumbers = "8.13.27"

[tool.poetry.group.dev.dependencies]
pytest = "7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
