[tool.poetry]
name = "hw-5"
version = "0.1.0"
description = ""
authors = ["PotapovALeksey <37796979+PotapovALeksey@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.7"
websockets = "12.0"
argparse = "1.4.0"
aiohttp = "3.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
