[tool.poetry]
name = "hw-8"
version = "0.1.0"
description = ""
authors = ["PotapovALeksey <37796979+PotapovALeksey@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.7"
redis = "5.0.1"
redis-lru = "0.1.2"
mongoengine = "0.27.0"
pymongo = "4.6.2"
python-dotenv = "1.0.1"
pika = "1.3.2"
faker = "23.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
